--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="style.css">
+<title>Responsive Popup with Buttons</title>
 </head>
 <body>
-    Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur alias quia expedita architecto voluptatibus voluptatem magnam laudantium. Dolorem facere, 
-    et nemo ipsa non quisquam id repudiandae, perspiciatis ea, consectetur quis?
+<div class="container-fluid" id="popup">
+  <button class="popup-button" >Button 1</button>
+  <button class="popup-button">Button 2</button>
+  <button class="popup-button">Button 3</button>
+  <button class="popup-button">Button 4</button>
+  <button class="popup-button">Button 5</button>
+  <button class="popup-button">Button 6</button>
+</div>
+
+<button onclick="togglePopup()">Open Popup</button>
+<script src="script.js"></script>
+<script crossorigin="anonymous" src="https://cdn.amcapi.com/translation/cloudtranslation-1.0.0.min.js"></script>
+<img class="mySlides" src="img_snowtops.jpg">
+<img class="mySlides" src="img_lights.jpg">
+<img class="mySlides" src="img_mountains.jpg">
+<img class="mySlides" src="img_forest.jpg">
+<button class="w3-button w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
+<button class="w3-button w3-display-right" onclick="plusDivs(+1)">&#10095;</button>
 </body>
 </html>
