--- a/index.html
+++ b/index.html
@@ -8,15 +8,10 @@
 </head>
 <body>
 <div class="container-fluid" id="popup">
-  <button class="popup-button" >Button 1</button>
-  <button class="popup-button">Button 2</button>
-  <button class="popup-button">Button 3</button>
-  <button class="popup-button">Button 4</button>
-  <button class="popup-button">Button 5</button>
-  <button class="popup-button">Button 6</button>
+  <button id="btn1" class="popup-button" >Button 1</button>
+  <button id="btn2" class="popup-button">Button 2</button>
+  <button id="btn3" class="popup-button">Button 3</button>
 </div>
-
-<button onclick="togglePopup()">Open Popup</button>
 <script src="script.js"></script>
 <script crossorigin="anonymous" src="https://cdn.amcapi.com/translation/cloudtranslation-1.0.0.min.js"></script>
 
